<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ResearchAssistant</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">ResearchAssistant</string>
    <string name="settings">Settings</string>
    <string name="ra_url">http://192.168.0.44:8077/ra</string>
    <string name="title_activity_settings">User Settings</string>
    <string name="login">"Login: "</string>
    <string name="password">"Password: "</string>
    <string name="sigkey">"Key: "</string>
    <string name="participant">"Participant: "</string>
    <string name="getsigkey">Get Signature Key</string>
    <string name="save_settings">Save Settings</string>
    <string name="update_surveys">Update Surveys</string>
    <string name="uri">"Uri: "</string>
    <string name="failure">Request Failed</string>
    <string name="title_activity_sections">Survey Sections</string>
    <string name="title_activity_section_dump">Raw JSON Data</string>
    <string name="title_activity_people">PeopleActivity</string>
    <string name="people_title">Participants:</string>
    <string name="people_add">Add a participant</string>
    <string name="surveys">Questionnaires:</string>
    <string name="edit_part">Edit</string>
    <string name="start_survey">Interview</string>
    <string name="del_part">Delete</string>
    <string name="delete_part_title">Delete Participant</string>
    <string name="delete_part_confirm">Really delete this participant record?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="title_activity_people_edit">Participant Profile</string>
    <string name="check_inactive">Inactive</string>
    <string name="edit_partid">Participant ID: </string>
    <string name="edit_name">Name: </string>
    <string name="edit_email">Email: </string>
    <string name="edit_phone">Phone: </string>
    <string name="edit_address">Address: </string>
    <string name="edit_notes">Notes: </string>
    <string name="save_part">Save</string>
    <string name="save_interviews">Upload Interview Data</string>
    <string name="action_add_part">Add a Participant</string>
    <string name="action_upload">Upload All Interview Data</string>
    <string name="action_delete_inactive_parts">Delete Inactive Participants</string>
    <string name="action_delete_parts">Delete All Participants</string>
    <string name="action_del_interviews">Delete Uploaded Interviews</string>
    <string name="del_interview">Delete</string>
    <string name="delete_interview_title">Delete Interview</string>
    <string name="delete_interview_confirm">Really delete this interview?</string>
    <string name="refresh_section">Reload</string>
    <string name="phone_part">Phone</string>
    <string name="email_part">Email</string>
    <string name="email_client">Select an email client:</string>
    <string name="phone_client">Choose a calling method:</string>
    <string name="contact_info">Contact Information</string>
    <string name="upload_interview">Upload This Interview</string>
</resources>
