<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".SettingsActivity" >

    <Button
        android:id="@+id/save_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveSettings"
        android:text="@string/save_settings" />

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <EditText
        android:id="@+id/edit_login"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >
    </EditText>
    
    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />
    
    <TextView
        android:id="@+id/sigkey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sigkey" />

    <EditText
        android:id="@+id/edit_sigkey"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <Button
        android:id="@+id/getsigkey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="getSigkey"
        android:text="@string/getsigkey" />

    <TextView
        android:id="@+id/uri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uri" />

    <EditText
        android:id="@+id/edit_uri"
        android:inputType="textUri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <Button
        android:id="@+id/update_surveys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="updateSurveys"
        android:enabled="false"
        android:text="@string/update_surveys" />

</LinearLayout>
