<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PeopleEditActivity" >

    <TextView
        android:id="@+id/partname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <LinearLayout android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
	    <CheckBox
	        android:id="@+id/check_inactive"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="20dp"
	        android:text="@string/check_inactive" />
	    
	    <Button
	        android:id="@+id/save_part"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:onClick="savePart"
	        android:text="@string/save_part" />
    </LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/edit_partid" />

    <EditText 
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:id="@+id/edit_partid">
    </EditText>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/edit_name" />
    
    <EditText 
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:id="@+id/edit_name"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/edit_email" />
    
    <EditText 
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:id="@+id/edit_email"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/edit_phone" />
    
    <EditText 
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:id="@+id/edit_phone"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/edit_address" />
    
    <EditText 
        android:inputType="textPostalAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:id="@+id/edit_address" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/edit_notes" />
    
    <EditText 
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:id="@+id/edit_notes" />
        
</LinearLayout>
